--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Hello mom</h1>
 <p>I'm hosted with GitHub Pages. It is free for me and my family!</p>
 </body>
 </html>
