--- a/index.html
+++ b/index.html
@@ -1,7 +1,123 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+    />
+  </head>
+  <body>
+    <div class="homepage">
+      <header class="homepage-inner">
+        <div class="kamens-headphones-parent">
+          <b class="kamens-headphones">
+            <p class="kamens">Kamen’s</p>
+            <p class="headphones">Headphones</p>
+          </b>
+          <div class="frame-wrapper">
+            <div class="vector-parent">
+              <img
+                class="frame-child"
+                loading="lazy"
+                alt=""
+                src="./public/line-1.svg"
+              />
+
+              <div class="vector-group">
+                <img
+                  class="frame-item"
+                  loading="lazy"
+                  alt=""
+                  src="./public/line-4.svg"
+                />
+
+                <img
+                  class="frame-inner"
+                  loading="lazy"
+                  alt=""
+                  src="./public/line-10.svg"
+                />
+              </div>
+              <div class="frame-container">
+                <div class="vector-container">
+                  <img
+                    class="line-icon"
+                    loading="lazy"
+                    alt=""
+                    src="./public/line-5.svg"
+                  />
+
+                  <div class="frame-div">
+                    <img
+                      class="frame-child1"
+                      loading="lazy"
+                      alt=""
+                      src="./public/line-6.svg"
+                    />
+
+                    <div class="vector-parent1">
+                      <img
+                        class="frame-child2"
+                        loading="lazy"
+                        alt=""
+                        src="./public/line-11.svg"
+                      />
+
+                      <img
+                        class="frame-child3"
+                        loading="lazy"
+                        alt=""
+                        src="./public/line-12.svg"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <section class="homepage-child">
+        <div class="frame-parent">
+          <div class="frame-group">
+            <div class="line-parent">
+              <img
+                class="frame-child4"
+                loading="lazy"
+                alt=""
+                src="./public/line-7.svg"
+              />
+
+              <b class="product-shot">Product shot</b>
+            </div>
+            <div class="rectangle-parent">
+              <div class="rectangle-div"></div>
+              <img class="frame-child5" alt="" src="./public/line-8.svg" />
+            </div>
+          </div>
+          <div class="frame-wrapper1">
+            <div class="ellipse-parent">
+              <div class="ellipse-div"></div>
+              <b class="b">+</b>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="kamens-headphones1">Kamen’s Headphones</div>
+      <section class="marketing-message">
+        <h1 class="this-is-out">This is out marketing message.</h1>
+      </section>
+      <div class="frame-parent1">
+        <div class="rectangle-group">
+          <div class="frame-child6"></div>
+          <b class="buy-now">Buy now</b>
+        </div>
+        <div class="rectangle-container">
